tests/neg-macros/i6976/Test_2.scala

import playground.macros._

object Test {
  def main(args: Array[String]): Unit = mcr { 2 } // error
}
